# data-engineering

./: .gitignore  README.md
api-pagination-handler/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api-pagination-handler/tests/: test_client.py  test_paginators.py  test_transport_retry.py
api-rate-limit-orchestrator/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api-rate-limit-orchestrator/tests/: test_bucket_orchestrator.py  test_quota_storage.py  test_redis_lua.py
aqp-coreset-engine/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
aqp-coreset-engine/examples/: demo.py
aqp-coreset-engine/src/: __init__.py  coreset.py
aqp-coreset-engine/tests/: test_bounds_eval.py  test_core.py  test_coreset.py  test_kll.py  test_predicates.py  test_sensitivity.py  test_uniform_streaming.py
art-mvcc-index/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
art-mvcc-index/benchmarks/: bench_concurrent.py  bench_lookup.py
art-mvcc-index/examples/: demo.py
art-mvcc-index/src/: __init__.py  art.py  mvcc.py  mvcc_art.py
art-mvcc-index/tests/: conftest.py  test_art.py  test_epoch.py  test_jepsen.py  test_mvcc.py  test_nodes.py  test_tree.py
b-epsilon-tree/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
b-epsilon-tree/benchmarks/: bench_read.py  bench_write.py
b-epsilon-tree/examples/: demo.py
b-epsilon-tree/src/: __init__.py  cost_model.py  tree.py
b-epsilon-tree/tests/: conftest.py  test_amplification.py  test_concurrent.py  test_flush.py  test_message.py  test_node.py  test_tree.py  test_tuner.py  test_workload.py
bayesian-dq-scorer/: .gitignore  README.md  pyproject.toml
bayesian-dq-scorer/bayesian_dq/: __init__.py  alerts.py  dimensions.py  models.py  scorer.py  visualization.py
bayesian-dq-scorer/examples/: demo.py
bayesian-dq-scorer/tests/: test_alerts.py  test_dimensions.py  test_scorer.py
cardinality-learned-optimizer/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cardinality-learned-optimizer/experiments/: reproduce_bao.py
cardinality-learned-optimizer/scripts/: init_pg.sql  setup_imdb.sh  train_model.py
cardinality-learned-optimizer/tests/: test_adaptive.py  test_bandit.py  test_plan_parser.py  test_tree_lstm.py
cep-engine/: .gitignore  README.md  pyproject.toml
cep-engine/benchmarks/: bench_engine.py
cep-engine/cep/: __init__.py  buffer.py  compiler.py  engine.py  event.py  pattern.py
cep-engine/examples/: fraud_detection.py  network_anomaly.py
cep-engine/tests/: test_engine.py  test_pattern.py
chandy-lamport-snapshot/: .gitignore  README.md  demo.py  pyproject.toml
chandy-lamport-snapshot/chandy_lamport/: __init__.py  channel.py  message.py  node.py  pipeline.py  snapshot.py
chandy-lamport-snapshot/tests/: test_exactly_once.py  test_recovery.py  test_snapshot.py
columnar-compression-testbed/: .gitignore  README.md  pyproject.toml
columnar-compression-testbed/examples/: basic_usage.py  schema_evolution.py
columnar-compression-testbed/tests/: conftest.py  test_alp.py  test_fsst.py  test_gorilla.py  test_selector.py
cow-mor-benchmark/: .gitignore  README.md  pyproject.toml
cow-mor-benchmark/examples/: run_benchmark.py
cow-mor-benchmark/tests/: test_classifier.py  test_compaction.py  test_engines.py  test_recommender.py
crdt-data-quality/: .gitignore  README.md  pyproject.toml
crdt-data-quality/benchmarks/: benchmark_merge.py
crdt-data-quality/scripts/: demo.py
crdt-data-quality/src/: cluster.py  metrics.py  worker.py
crdt-data-quality/tests/: test_cluster.py  test_g_counter.py  test_hyperloglog.py  test_or_set.py  test_pn_counter.py
data-contract-platform/: .gitignore  README.md  pyproject.toml
data-contract-platform/docs/: contract-schema.md
data-contract-platform/examples/: breaking_change_demo.py  quickstart.py
data-contract-platform/tests/: test_registry.py  test_reporter.py  test_scorer.py  test_validator.py
delta-vs-iceberg-vs-hudi/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
delta-vs-iceberg-vs-hudi/tests/: test_compare.py  test_delta.py  test_hudi.py  test_iceberg.py
deterministic-replay-engine/: .gitignore  README.md  pyproject.toml
deterministic-replay-engine/examples/: distributed_join.py  simple_pipeline.py
deterministic-replay-engine/tests/: test_causal_order.py  test_exactly_once.py  test_replay.py  test_udf_detector.py  test_vector_clock.py
distributed-query-planner/: .gitignore  README.md  pyproject.toml
distributed-query-planner/examples/: basic_query.py  federated_query.py
distributed-saga-orchestrator/: .gitignore  README.md  pyproject.toml
feature-store/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
forecasting-pipeline-scheduler/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
hlc-metadata-store/: .gitignore  README.md  pyproject.toml
incremental-file-watcher/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
inflation-crawler/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jepsen-linearizability/: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py
kafka-s3-replay/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
lambda-kappa-migration/: .gitignore  ARCHITECTURE.md  MIGRATION_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
learned-index-lsm/: .gitignore  README.md  pyproject.toml
learned-layout-optimizer/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
log-based-cdc-from-scratch/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
lsm-ts/: .gitignore  README.md  pyproject.toml
lsm-ts/lsm/: bloom.py  (+7 more)
materialized-view-selector/: .gitignore  README.md  cli.py  config.yaml  pyproject.toml
(+2497 files in other folders)
