[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqp-coreset-engine"
version = "0.1.0"
description = "Approximate query processing with sensitivity-sampled coresets, merge-and-reduce streaming, and KLL quantiles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["approximate-query-processing", "coreset", "sensitivity-sampling", "kll", "streaming"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0", "pytest-cov>=5.0",
    "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5", "rich>=13.0",
]

[project.scripts]
aqpctl = "aqp.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/aqp-coreset-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/aqp"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["numpy.*", "rich.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TC"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"benchmarks/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
