[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-dq-scorer"
version = "0.1.0"
description = "Bayesian Data Quality Scorer: posterior distributions over completeness, freshness, and uniqueness with uncertainty-aware anomaly alerts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["data-quality", "bayesian", "data-engineering", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bayesian_dq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
