[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cep-engine"
version = "0.1.0"
description = "Sub-millisecond in-process Complex Event Processing engine with JIT-compiled pattern matchers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cep", "complex-event-processing", "numba", "streaming", "fraud-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
jit = [
    "numba>=0.58",
]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "numba>=0.58",
]

[tool.hatch.build.targets.wheel]
packages = ["cep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
