[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chandy-lamport-snapshot"
version = "0.1.0"
description = "Chandy-Lamport distributed snapshot algorithm for multi-node streaming pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout"]

[tool.pytest.ini_options]
timeout = 30
testpaths = ["tests"]
