[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-contract-enforcement"
version = "0.1.0"
description = "Automated Data Contract Enforcement Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Data Platform Team" }]
keywords = ["data", "contracts", "data-quality", "validation", "sla"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",   # parquet support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dce = "dce.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["dce"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
