[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-replay-engine"
version = "0.1.0"
description = "Deterministic replay of distributed event logs with causal ordering and UDF non-determinism detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
replay-engine = "replay_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
