[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-store"
version = "0.1.0"
description = "Real-time dual-layer feature store: Kafka + Redis + Parquet"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "hiredis>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.26.0",
    "fakeredis>=2.20.0",
    "ruff>=0.3.0",
]

[project.scripts]
fs-serve = "feature_store.serving.server:main"
fs-ingest = "feature_store.ingestion.kafka_consumer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_store"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
