[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecasting-pipeline-scheduler"
version = "0.1.0"
description = "Pipeline scheduler with lognormal duration forecasts, critical-path list scheduling, branch-and-bound on small DAGs, and shadow-mode regret accounting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["scheduler", "dag", "critical-path", "branch-and-bound", "forecasting", "cusum"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0", "pytest-cov>=5.0",
    "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5", "rich>=13.0",
]

[project.scripts]
fpsctl = "fps.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/forecasting-pipeline-scheduler"

[tool.hatch.build.targets.wheel]
packages = ["src/fps"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TC"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
