[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlc-metadata-store"
version = "0.1.0"
description = "Multi-region metadata store using Hybrid Logical Clocks to eliminate causal anomalies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["hlc_store"]
branch = true

[tool.coverage.report]
show_missing = true
