[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inflation-crawler"
version = "0.1.0"
description = "Modern Common Crawl pipeline for measuring inflation from online product prices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thuy" }]

dependencies = [
    "duckdb>=0.10",
    "polars>=0.20",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "warcio>=1.7",
    "extruct>=0.17",
    "selectolax>=0.3.21",
    "price-parser>=0.3.4",
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.28"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4"]

[project.scripts]
ic = "inflation_crawler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inflation_crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
