[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafka-s3-replay"
version = "0.1.0"
description = "Disaster recovery replay system for Kafka/S3 event archives"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "confluent-kafka>=2.3",
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiohttp>=3.9",
    "rich>=13.7",
    "fastavro>=1.9",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "structlog>=24.1",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",
    "httpx>=0.27",
    "coverage>=7.4",
    "ruff>=0.3",
    "mypy>=1.9",
    "boto3-stubs[s3]>=1.34",
]

[project.scripts]
replay = "replay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/replay"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
ignore_missing_imports = true
