[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lambda-kappa-migration"
version = "0.1.0"
description = "Data engineering showcase: migrating from Lambda to Kappa architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lambda-kappa-migration contributors" }]
keywords = ["data-engineering", "lambda-architecture", "kappa-architecture", "kafka", "streaming"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "kafka-python>=2.0.2",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
