[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm-learned"
version = "0.1.0"
description = "Learned index structures (RMI) for LSM engines with distribution-drift detection"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sortedcontainers>=2.4",
    "mmh3>=4.0",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-benchmark>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
