[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-based-cdc-from-scratch"
version = "0.1.0"
description = "From-scratch CDC reader: MySQL binlog parser + Postgres pgoutput decoder. No Debezium, no driver dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["cdc", "mysql-binlog", "postgres", "wal", "pgoutput", "logical-replication"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
lcdcctl = "lcdc.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/log-based-cdc-from-scratch"

[tool.hatch.build.targets.wheel]
packages = ["src/lcdc"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TC"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
