[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsm-ts"
version = "0.1.0"
description = "LSM-tree storage engine optimized for time-series / IoT workloads"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sortedcontainers>=2.4",
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
bench = [
    "rich>=13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["lsm"]
