[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materialized-view-selector"
version = "0.1.0"
description = "Self-optimising materialized view selector for BigQuery and Snowflake"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["bigquery", "snowflake", "materialized-views", "optimization", "data-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
sql = ["sqlglot>=23.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]
all = [
  "google-cloud-bigquery>=3.0",
  "snowflake-connector-python>=3.0",
  "sqlglot>=23.0",
]

[project.scripts]
mv-selector = "cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
